# ChromaPrint3D

./: .clangd  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.build  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
3dparty/kdtree/: kdtree.h
apps/: CMakeLists.txt  README.md  build_colordb.cpp  chromaprint3d_server.cpp  gen_calibration_board.cpp  gen_representative_board.cpp  gen_stage.cpp  image_to_3mf.cpp  task_manager.h
apps/server/: board_cache.h  board_geometry_cache.h  color_db_cache.h  http_utils.h  recipe_store.h  request_builder.h  routes_calibration.h  routes_colordb.h  routes_convert.h  routes_health.h  routes_session.h  server_context.h  server_options.h  session.h
core/: CMakeLists.txt  README.en.md  README.md
core/cmake/: ChromaPrint3DConfig.cmake.in
core/include/: calib.h  colorDB.h  common.h  geo.h  imgproc.h  match.h  vec3.h
core/include/chromaprint3d/: calib.h  chromaprint3d.h  color.h  color_db.h  common.h  encoding.h  error.h  export.h  export_3mf.h  imgproc.h  kdtree.h  logging.h  mesh.h  model_package.h  pipeline.h  print_profile.h  recipe_map.h  vec3.h  version.h.in  voxel.h
core/src/calib/: calib.cpp  loc.cpp
core/src/colorDB/: colorDB.cpp
core/src/color_db/: color_db.cpp
core/src/common/: common.cpp
core/src/detail/: cv_utils.h  json_utils.h
core/src/encoding/: encoding.cpp
core/src/geo/: export3mf.cpp  export_3mf.cpp  geo.cpp
core/src/imgproc/: imgproc.cpp
core/src/logging/: logging.cpp
core/src/match/: candidate_select.cpp  match.cpp  model_package.cpp  print_profile.cpp  recipe_convert.cpp  recipe_map.cpp
core/src/match/detail/: candidate_select.h  match_utils.h  recipe_convert.h
core/src/pipeline/: pipeline.cpp
core/tests/: CMakeLists.txt  test_color.cpp  test_color_db.cpp  test_kdtree.cpp  test_mesh.cpp  test_recipe_convert.cpp  test_vec3.cpp  test_voxel.cpp
data/dbs/: CMYB_008_5L.json  RYBW_008_5L.json  repre_004_10L_001.json  repre_008_5L_001.json
data/recipes/: 8color_boards.json
docs/: deployment.md
modeling/: README.md  __init__.py  model_desc.md
modeling/core/: __init__.py  adam.py  color_calibration.py  color_space.py  colorchecker_tool.py  forward_model.py  io_utils.py  math_utils.py
modeling/eval/: __init__.py  plot_stage_a_diagnostics.py  plot_stage_channels.py  preview_quality.py
modeling/pipeline/: __init__.py  gen_8color_board_recipes.py  step1_extract_stages.py  step2_fit_stage_a.py  step3_fit_stage_b.py  step4_select_recipes.py  step5_build_model_package.py
python/: CMakeLists.txt  ChromaPrint3D.pyi
python/bindings/: bind_calib.cpp  bind_color_db.cpp  bind_common.cpp  bind_geo.cpp  bind_imgproc.cpp  bind_match.cpp  bindings.h  module.cpp  pybind_utils.h
scrips/: test_import.py
web/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  api.ts  types.ts
web/src/components/: Calibration8ColorPanel.vue  CalibrationPanel.vue  ConvertPanel.vue  ImageUpload.vue  ParamPanel.vue  ResultPanel.vue
