cmake_minimum_required(VERSION 3.25)

project(ChromaPrint3D VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build static libraries" FORCE)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(BUILD_LIST "core,imgproc,imgcodecs" CACHE STRING "OpenCV modules to build" FORCE)
set(BUILD_TESTS OFF CACHE BOOL "Disable tests" FORCE)
set(BUILD_PERF_TESTS OFF CACHE BOOL "Disable perf tests" FORCE)
set(BUILD_EXAMPLES OFF CACHE BOOL "Disable examples" FORCE)
set(BUILD_DOCS OFF CACHE BOOL "Disable docs" FORCE)
set(BUILD_opencv_apps OFF CACHE BOOL "Disable OpenCV apps" FORCE)
set(BUILD_JAVA OFF CACHE BOOL "Disable Java bindings" FORCE)
set(BUILD_opencv_python2 OFF CACHE BOOL "Disable OpenCV Python2 bindings" FORCE)
set(BUILD_opencv_python3 OFF CACHE BOOL "Disable OpenCV Python3 bindings" FORCE)
set(WITH_IPP ON CACHE BOOL "Enable IPP" FORCE)
set(WITH_IPP_IW ON CACHE BOOL "Enable IPP IW" FORCE)
set(BUILD_IPP_IW ON CACHE BOOL "Build IPP IW" FORCE)
set(OPENCV_FORCE_3RDPARTY_BUILD ON CACHE BOOL "Use bundled 3rdparty" FORCE)
set(BUILD_ZLIB ON CACHE BOOL "Build zlib from source" FORCE)
set(BUILD_JPEG ON CACHE BOOL "Build libjpeg from source" FORCE)
set(BUILD_PNG ON CACHE BOOL "Build libpng from source" FORCE)
set(BUILD_TIFF ON CACHE BOOL "Build libtiff from source" FORCE)
set(BUILD_WEBP ON CACHE BOOL "Build libwebp from source" FORCE)
set(BUILD_OPENEXR ON CACHE BOOL "Build OpenEXR from source" FORCE)
set(BUILD_OPENJPEG ON CACHE BOOL "Build OpenJPEG from source" FORCE)
set(BUILD_JASPER OFF CACHE BOOL "Disable Jasper" FORCE)
set(WITH_JPEG ON CACHE BOOL "Enable JPEG" FORCE)
set(WITH_PNG ON CACHE BOOL "Enable PNG" FORCE)
set(WITH_TIFF ON CACHE BOOL "Enable TIFF" FORCE)
set(WITH_WEBP ON CACHE BOOL "Enable WebP" FORCE)
set(WITH_OPENEXR ON CACHE BOOL "Enable OpenEXR" FORCE)
set(WITH_OPENJPEG ON CACHE BOOL "Enable OpenJPEG" FORCE)

add_subdirectory(3dparty/opencv)

set(LIB3MF_TESTS OFF CACHE BOOL "Disable lib3mf tests" FORCE)
set(LIB3MF_BUILD_SHARED OFF CACHE BOOL "Build lib3mf shared library" FORCE)
set(USE_INCLUDED_ZLIB ON CACHE BOOL "Use included zlib" FORCE)
set(USE_INCLUDED_LIBZIP ON CACHE BOOL "Use included libzip" FORCE)
set(USE_INCLUDED_SSL ON CACHE BOOL "Use included libressl" FORCE)
add_subdirectory(3dparty/lib3mf)
if(TARGET lib3mf)
    if(MSVC)
        target_compile_options(lib3mf PRIVATE /W0)
    else()
        target_compile_options(lib3mf PRIVATE -w)
    endif()
endif()

add_subdirectory(3dparty/pybind11)

add_subdirectory(core)
add_subdirectory(apps)
add_subdirectory(python)

