[build-system]
requires = ["scikit-build-core>=0.10", "numpy>=1.23"]
build-backend = "scikit_build_core.build"

[project]
name = "ChromaPrint3D"
version = "0.1.0"
description = "ChromaPrint3D Python bindings"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]

[tool.scikit-build]
cmake.version = ">=3.25"
cmake.build-type = "Release"
wheel.packages = []

[tool.scikit-build.sdist]
include = [
  "CMakeLists.txt",
  "core/**",
  "python/**",
  "apps/**",
  "3dparty/pybind11/**",
  "3dparty/lib3mf/**",
  "3dparty/opencv/**",
]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
archs = ["x86_64"]
skip = "*musllinux*"
